--- a/client/src/components/SingleProduct/SingleProduct.scss
+++ b/client/src/components/SingleProduct/SingleProduct.scss
@@ -78,74 +78,90 @@
                 }
 
                 .cart-buttons {
-                    width: fit-content;
                     display: flex;
-                    border: 2px solid rgba(0, 0, 0, 0.2);
-                    margin-right: 10px;
-                    height: 50px;
-                    span {
-                        font-size: 18px;
-                        width: 40px;
+
+                    @include md {
+                        margin-top: 30px;
+                    }
+
+                    .quantity-button {
+                        width: fit-content;
+                        display: flex;
+                        border: 2px solid rgba(0, 0, 0, 0.2);
+                        margin-right: 10px;
+                        height: 50px;
+
+                        span {
+                            font-size: 18px;
+                            width: 40px;
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
+                            cursor: pointer;
+                            color: #6b6b6b;
+
+                            &:nth-child(1) {
+                                border-right: 2px solid rgba(0, 0, 0, 0.2);
+                            }
+
+                            &:nth-child(2) {
+                                width: 60px;
+                            }
+
+                            &:nth-child(3) {
+                                border-left: 2px solid rgba(0, 0, 0, 0.2);
+                            }
+                        }
+                    }
+
+                    .add-to-cart-button {
+                        outline: 0;
+                        border: 0;
+                        height: 50px;
+                        width: 180px;
                         display: flex;
                         align-items: center;
                         justify-content: center;
                         cursor: pointer;
-                        color: #6b6b6b;
-                        &:nth-child(1) {
-                            border-right: 2px solid rgba(0, 0, 0, 0.2);
-                        }
-                        &:nth-child(2){
-                            width: 60px;
-                        }
-                        &:nth-child(3) {
-                            border-left: 2px solid rgba(0, 0, 0, 0.2);
-                        }
-                    }
-                }
-                .add-to-cart-button {
-                    outline: 0;
-                    border: 0;
-                    height: 50px;
-                    width: 180px;
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-                    cursor: pointer;
-                    font-size: 16px;
-                    color: white;
-                    background: #8e2de2;
-                    border-bottom: 2px solid #6516aa;
-                    flex-grow: 1;
-                    @include md {
-                        flex-grow: unset;
-                    }
-                }
-            }
-
-            .divider {
-                margin: 20px 0;
-                height: 1px;
-                width: 100%;
-                background-color: rgba(0, 0, 0, 0.1);
-            }
-
-            .info-item {
-                .text-bold {
-                    font-size: 18px;
-                    font-weight: 500;
-                    display: block;
-                    &:nth-child(1) {
-                        margin-bottom: 20px;
-                    }
-
-                    span {
                         font-size: 16px;
-                        font-weight: 400;
-                        cursor: pointer;
-                        color: #6b6b6b;
+                        color: white;
+                        background: #8e2de2;
+                        border-bottom: 2px solid #6516aa;
+                        flex-grow: 1;
+
+                        @include md {
+                            flex-grow: unset;
+                        }
                     }
-                    svg {
-                        margin: 0 5px;
+                }
+
+                .divider {
+                    margin: 20px 0;
+                    height: 1px;
+                    width: 100%;
+                    background-color: rgba(0, 0, 0, 0.1);
+                }
+
+                .info-item {
+                    .text-bold {
+                        font-size: 18px;
+                        font-weight: 500;
+                        display: block;
+
+                        &:nth-child(1) {
+                            margin-bottom: 20px;
+                        }
+
+                        span {
+                            font-size: 16px;
+                            font-weight: 400;
+                            cursor: pointer;
+                            color: #6b6b6b;
+                        }
+
+                        svg {
+                            margin: 0 5px;
+                        }
                     }
                 }
             }
