--- a/client/src/components/Home/Banner/Banner.scss
+++ b/client/src/components/Home/Banner/Banner.scss
@@ -3,7 +3,7 @@
 .hero-banner {
     padding: 40px 0;
     position: relative;
-    background-image: linear-gradient(to right, #8e2de2, #4a00e0);
+    background-image: linear-gradient(to right, #14074c, #726f78);
 
     @include md {
         height: calc(100vh - 80px);
